Sayfa 31 çevirisi eklendi — Chapter 3: Functions giriş sayfası

--- a/index.html
+++ b/index.html
@@ -277,14 +277,14 @@
             <button class="page-go-btn" onclick="goToPage()">Git</button>
         </div>
         <div class="error-message" id="errorMsg"></div>
-        <div class="input-hint">Çevrilen sayfalar: 1 — 30 &nbsp;|&nbsp; Kitap toplam: ~464 sayfa</div>
+        <div class="input-hint">Çevrilen sayfalar: 1 — 31 &nbsp;|&nbsp; Kitap toplam: ~464 sayfa</div>
     </div>
 
     <!-- Çevrilen Sayfalar -->
     <div class="pages-section">
         <div class="pages-title">
             Çevrilen Sayfalar
-            <span class="badge">30</span>
+            <span class="badge">31</span>
         </div>
 
         <a href="pages/page-1.html" class="page-card">
@@ -548,6 +548,15 @@
             <div class="page-card-arrow">&rsaquo;</div>
         </a>
 
+        <a href="pages/page-31.html" class="page-card">
+            <div class="page-card-number">31</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Fonksiyonlar — Giriş / Functions — Introduction</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Introduction</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
     </div>
 
 </div>
@@ -589,6 +598,7 @@
         28: { file: 'pages/page-28.html', title: 'Anlamlı Bağlam Ekleme (devam)', chapter: 'Chapter 2: Meaningful Names' },
         29: { file: 'pages/page-29.html', title: 'Gereksiz Bağlam Eklemeyin / Don\'t Add Gratuitous Context', chapter: 'Chapter 2: Meaningful Names' },
         30: { file: 'pages/page-30.html', title: 'Son Sözler / Final Words', chapter: 'Chapter 2: Meaningful Names' },
+        31: { file: 'pages/page-31.html', title: 'Fonksiyonlar — Giriş / Functions — Introduction', chapter: 'Chapter 3: Functions' },
     };
 
     const MAX_BOOK_PAGE = 464;
