--- a/pages/page-30.html
+++ b/pages/page-30.html
@@ -169,9 +169,9 @@
         <div class="nav-btn-label"><span class="tr-text">Önceki Sayfa</span><span class="en-text" style="display:none;">Previous Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 29 — Gereksiz Bağlamdan Kaçın</span><span class="en-text" style="display:none;">Page 29 — Avoid Gratuitous Context</span></div>
     </a>
-    <a href="page-31.html" class="nav-btn next not-translated" onclick="return handleUntranslated(event, 31)">
+    <a href="page-31.html" class="nav-btn next">
         <div class="nav-btn-label"><span class="tr-text">Sonraki Bölüm</span><span class="en-text" style="display:none;">Next Chapter</span></div>
-        <div class="nav-btn-page"><span class="tr-text">Bölüm 3: Fonksiyonlar / Functions</span><span class="en-text" style="display:none;">Chapter 3: Functions</span></div>
+        <div class="nav-btn-page"><span class="tr-text">Sayfa 31 — Bölüm 3: Fonksiyonlar / Functions</span><span class="en-text" style="display:none;">Page 31 — Chapter 3: Functions</span></div>
     </a>
 </div>
 
@@ -294,7 +294,7 @@
         alert("Sayfa " + num + " henüz çevrilmedi. '/cevir " + num + "' komutuyla çevirebilirsiniz.");
         return false;
     }
-    const PAGES_MAP = {1:'page-1.html',2:'page-2.html',3:'page-3.html',4:'page-4.html',5:'page-5.html',6:'page-6.html',7:'page-7.html',8:'page-8.html',9:'page-9.html',10:'page-10.html',11:'page-11.html',12:'page-12.html',13:'page-13.html',14:'page-14.html',15:'page-15.html',17:'page-17.html',18:'page-18.html',19:'page-19.html',20:'page-20.html',21:'page-21.html',22:'page-22.html',23:'page-23.html',24:'page-24.html',25:'page-25.html',26:'page-26.html',27:'page-27.html',28:'page-28.html',29:'page-29.html',30:'page-30.html'};
+    const PAGES_MAP = {1:'page-1.html',2:'page-2.html',3:'page-3.html',4:'page-4.html',5:'page-5.html',6:'page-6.html',7:'page-7.html',8:'page-8.html',9:'page-9.html',10:'page-10.html',11:'page-11.html',12:'page-12.html',13:'page-13.html',14:'page-14.html',15:'page-15.html',17:'page-17.html',18:'page-18.html',19:'page-19.html',20:'page-20.html',21:'page-21.html',22:'page-22.html',23:'page-23.html',24:'page-24.html',25:'page-25.html',26:'page-26.html',27:'page-27.html',28:'page-28.html',29:'page-29.html',30:'page-30.html',31:'page-31.html'};
     const CURRENT_PAGE = 30;
     function goToPageNum() {
         const input = document.getElementById('pageNumInput');
