Navigasyon hataları düzeltildi — sayfalar arası geçişler artık çalışıyor

--- a/pages/page-23.html
+++ b/pages/page-23.html
@@ -187,11 +187,11 @@ for (int j=0; j &lt; NUMBER_OF_TASKS; j++) {
 </div>
 
 <div class="page-nav">
-    <a href="page-22.html" class="nav-btn not-translated" onclick="return handleUntranslated(event, 22)">
+    <a href="page-22.html" class="nav-btn">
         <div class="nav-btn-label"><span class="tr-text">Önceki Sayfa</span><span class="en-text" style="display:none;">Previous Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 22 — Telaffuz Edilebilir İsimler (devam) &amp; Aranabilir İsimler Kullanın</span><span class="en-text" style="display:none;">Page 22 — Use Pronounceable Names (cont.) &amp; Use Searchable Names</span></div>
     </a>
-    <a href="page-24.html" class="nav-btn next not-translated" onclick="return handleUntranslated(event, 24)">
+    <a href="page-24.html" class="nav-btn next">
         <div class="nav-btn-label"><span class="tr-text">Sonraki Sayfa</span><span class="en-text" style="display:none;">Next Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 24 — Macar Notasyonu (devam) &amp; Üye Önekleri</span><span class="en-text" style="display:none;">Page 24 — Hungarian Notation (cont.) &amp; Member Prefixes</span></div>
     </a>
