--- a/pages/page-24.html
+++ b/pages/page-24.html
@@ -177,7 +177,7 @@ public class Part {
         <div class="nav-btn-label"><span class="tr-text">Önceki Sayfa</span><span class="en-text" style="display:none;">Previous Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 23 — Macar Notasyonu (Hungarian Notation)</span><span class="en-text" style="display:none;">Page 23 — Hungarian Notation</span></div>
     </a>
-    <a href="page-25.html" class="nav-btn next not-translated" onclick="return handleUntranslated(event, 25)">
+    <a href="page-25.html" class="nav-btn next">
         <div class="nav-btn-label"><span class="tr-text">Sonraki Sayfa</span><span class="en-text" style="display:none;">Next Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 25 — Zihinsel Haritalamadan Kaçının</span><span class="en-text" style="display:none;">Page 25 — Avoid Mental Mapping</span></div>
     </a>
