--- a/pages/page-27.html
+++ b/pages/page-27.html
@@ -184,11 +184,11 @@
 </div>
 
 <div class="page-nav">
-    <a href="page-26.html" class="nav-btn not-translated" onclick="return handleUntranslated(event, 26)">
+    <a href="page-26.html" class="nav-btn">
         <div class="nav-btn-label"><span class="tr-text">Önceki Sayfa</span><span class="en-text" style="display:none;">Previous Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 26 — Şirinlikten Kaçının / Her Kavram İçin Tek Kelime</span><span class="en-text" style="display:none;">Page 26 — Don't Be Cute / One Word per Concept</span></div>
     </a>
-    <a href="page-28.html" class="nav-btn next not-translated" onclick="return handleUntranslated(event, 28)">
+    <a href="page-28.html" class="nav-btn next">
         <div class="nav-btn-label"><span class="tr-text">Sonraki Sayfa</span><span class="en-text" style="display:none;">Next Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 28 — Anlamlı Bağlam (devam)</span><span class="en-text" style="display:none;">Page 28 — Meaningful Context (cont.)</span></div>
     </a>
