Ana sayfa güncellendi — Sayfa 32-35 kartları eklendi

--- a/index.html
+++ b/index.html
@@ -277,14 +277,14 @@
             <button class="page-go-btn" onclick="goToPage()">Git</button>
         </div>
         <div class="error-message" id="errorMsg"></div>
-        <div class="input-hint">Çevrilen sayfalar: 1 — 31 &nbsp;|&nbsp; Kitap toplam: ~464 sayfa</div>
+        <div class="input-hint">Çevrilen sayfalar: 1 — 35 &nbsp;|&nbsp; Kitap toplam: ~464 sayfa</div>
     </div>
 
     <!-- Çevrilen Sayfalar -->
     <div class="pages-section">
         <div class="pages-title">
             Çevrilen Sayfalar
-            <span class="badge">31</span>
+            <span class="badge">35</span>
         </div>
 
         <a href="pages/page-1.html" class="page-card">
@@ -557,6 +557,42 @@
             <div class="page-card-arrow">&rsaquo;</div>
         </a>
 
+        <a href="pages/page-32.html" class="page-card">
+            <div class="page-card-number">32</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Küçük Olmalı! / Small!</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Small!</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-33.html" class="page-card">
+            <div class="page-card-number">33</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Bloklar ve Girinti / Blocks and Indenting</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Blocks and Indenting</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-34.html" class="page-card">
+            <div class="page-card-number">34</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Tek Şey Yapmalı / Do One Thing</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Do One Thing</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-35.html" class="page-card">
+            <div class="page-card-number">35</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Fonksiyonlar İçinde Bölümler & Soyutlama Seviyesi / Sections within Functions & One Level of Abstraction per Function</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Sections within Functions / One Level of Abstraction</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
     </div>
 
 </div>
@@ -599,6 +635,10 @@
         29: { file: 'pages/page-29.html', title: 'Gereksiz Bağlam Eklemeyin / Don\'t Add Gratuitous Context', chapter: 'Chapter 2: Meaningful Names' },
         30: { file: 'pages/page-30.html', title: 'Son Sözler / Final Words', chapter: 'Chapter 2: Meaningful Names' },
         31: { file: 'pages/page-31.html', title: 'Fonksiyonlar — Giriş / Functions — Introduction', chapter: 'Chapter 3: Functions' },
+        32: { file: 'pages/page-32.html', title: 'Küçük Olmalı! / Small!', chapter: 'Chapter 3: Functions' },
+        33: { file: 'pages/page-33.html', title: 'Bloklar ve Girinti / Blocks and Indenting', chapter: 'Chapter 3: Functions' },
+        34: { file: 'pages/page-34.html', title: 'Tek Şey Yapmalı / Do One Thing', chapter: 'Chapter 3: Functions' },
+        35: { file: 'pages/page-35.html', title: 'Fonksiyonlar İçinde Bölümler & Soyutlama Seviyesi / Sections within Functions & One Level of Abstraction per Function', chapter: 'Chapter 3: Functions' },
     };
 
     const MAX_BOOK_PAGE = 464;
