Sayfa 36-39 çevirisi eklendi — Chapter 3: Functions

--- a/index.html
+++ b/index.html
@@ -277,14 +277,14 @@
             <button class="page-go-btn" onclick="goToPage()">Git</button>
         </div>
         <div class="error-message" id="errorMsg"></div>
-        <div class="input-hint">Çevrilen sayfalar: 1 — 35 &nbsp;|&nbsp; Kitap toplam: ~464 sayfa</div>
+        <div class="input-hint">Çevrilen sayfalar: 1 — 39 &nbsp;|&nbsp; Kitap toplam: ~464 sayfa</div>
     </div>
 
     <!-- Çevrilen Sayfalar -->
     <div class="pages-section">
         <div class="pages-title">
             Çevrilen Sayfalar
-            <span class="badge">35</span>
+            <span class="badge">39</span>
         </div>
 
         <a href="pages/page-1.html" class="page-card">
@@ -593,6 +593,42 @@
             <div class="page-card-arrow">&rsaquo;</div>
         </a>
 
+        <a href="pages/page-36.html" class="page-card">
+            <div class="page-card-number">36</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Fonksiyon Başına Bir Soyutlama Seviyesi & Basamak Kuralı / One Level of Abstraction per Function & The Stepdown Rule</div>
+                <div class="page-card-chapter">Chapter 3: Functions — One Level of Abstraction / Stepdown Rule</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-37.html" class="page-card">
+            <div class="page-card-number">37</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Switch İfadeleri & Açıklayıcı İsimler / Switch Statements & Use Descriptive Names</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Switch Statements / Descriptive Names</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-38.html" class="page-card">
+            <div class="page-card-number">38</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Tutarlı Kelime Haznesi & Fonksiyon Argümanları / Consistent Lexicon & Function Arguments</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Consistent Lexicon / Function Arguments</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-39.html" class="page-card">
+            <div class="page-card-number">39</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Sık Görülen Tekli Formlar, Bayrak Argümanları, İkililer / Common Monadic Forms, Flag Arguments, Dyads</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Common Monadic Forms / Flag Arguments / Dyadic Functions</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
     </div>
 
 </div>
@@ -639,6 +675,10 @@
         33: { file: 'pages/page-33.html', title: 'Bloklar ve Girinti / Blocks and Indenting', chapter: 'Chapter 3: Functions' },
         34: { file: 'pages/page-34.html', title: 'Tek Şey Yapmalı / Do One Thing', chapter: 'Chapter 3: Functions' },
         35: { file: 'pages/page-35.html', title: 'Fonksiyonlar İçinde Bölümler & Soyutlama Seviyesi / Sections within Functions & One Level of Abstraction per Function', chapter: 'Chapter 3: Functions' },
+        36: { file: 'pages/page-36.html', title: 'Fonksiyon Başına Bir Soyutlama Seviyesi & Basamak Kuralı / One Level of Abstraction per Function & The Stepdown Rule', chapter: 'Chapter 3: Functions' },
+        37: { file: 'pages/page-37.html', title: 'Switch İfadeleri & Açıklayıcı İsimler / Switch Statements & Use Descriptive Names', chapter: 'Chapter 3: Functions' },
+        38: { file: 'pages/page-38.html', title: 'Tutarlı Kelime Haznesi & Fonksiyon Argümanları / Consistent Lexicon & Function Arguments', chapter: 'Chapter 3: Functions' },
+        39: { file: 'pages/page-39.html', title: 'Sık Görülen Tekli Formlar, Bayrak Argümanları, İkililer / Common Monadic Forms, Flag Arguments, Dyads', chapter: 'Chapter 3: Functions' },
     };
 
     const MAX_BOOK_PAGE = 464;
