Sayfa 35-39 navigasyon butonları düzeltildi

--- a/pages/page-37.html
+++ b/pages/page-37.html
@@ -210,7 +210,7 @@
         <div class="nav-btn-label"><span class="tr-text">Önceki Sayfa</span><span class="en-text" style="display:none;">Previous Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 36 — Basamak Kuralı</span><span class="en-text" style="display:none;">Page 36 — Stepdown Rule</span></div>
     </a>
-    <a href="page-38.html" class="nav-btn next not-translated" onclick="return handleUntranslated(event, 38)">
+    <a href="page-38.html" class="nav-btn next">
         <div class="nav-btn-label"><span class="tr-text">Sonraki Sayfa</span><span class="en-text" style="display:none;">Next Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 38 — Açıklayıcı İsimler</span><span class="en-text" style="display:none;">Page 38 — Descriptive Names</span></div>
     </a>
