--- a/pages/page-38.html
+++ b/pages/page-38.html
@@ -189,7 +189,7 @@
         <div class="nav-btn-label"><span class="tr-text">Önceki Sayfa</span><span class="en-text" style="display:none;">Previous Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 37 — Açıklayıcı İsimler</span><span class="en-text" style="display:none;">Page 37 — Descriptive Names</span></div>
     </a>
-    <a href="page-39.html" class="nav-btn next not-translated" onclick="return handleUntranslated(event, 39)">
+    <a href="page-39.html" class="nav-btn next">
         <div class="nav-btn-label"><span class="tr-text">Sonraki Sayfa</span><span class="en-text" style="display:none;">Next Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 39 — Fonksiyon Argümanları</span><span class="en-text" style="display:none;">Page 39 — Function Arguments</span></div>
     </a>
