--- a/pages/page-35.html
+++ b/pages/page-35.html
@@ -195,7 +195,7 @@
         <div class="nav-btn-label"><span class="tr-text">Önceki Sayfa</span><span class="en-text" style="display:none;">Previous Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 34 — Tek Şey Yapmalı</span><span class="en-text" style="display:none;">Page 34 — Do One Thing</span></div>
     </a>
-    <a href="page-36.html" class="nav-btn next not-translated" onclick="return handleUntranslated(event, 36)">
+    <a href="page-36.html" class="nav-btn next">
         <div class="nav-btn-label"><span class="tr-text">Sonraki Sayfa</span><span class="en-text" style="display:none;">Next Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 36 — Soyutlama Seviyesi</span><span class="en-text" style="display:none;">Page 36 — Abstraction Level</span></div>
     </a>
