--- a/pages/page-36.html
+++ b/pages/page-36.html
@@ -189,7 +189,7 @@
         <div class="nav-btn-label"><span class="tr-text">Önceki Sayfa</span><span class="en-text" style="display:none;">Previous Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 35 — Fonksiyon Bölümleri</span><span class="en-text" style="display:none;">Page 35 — Function Sections</span></div>
     </a>
-    <a href="page-37.html" class="nav-btn next not-translated" onclick="return handleUntranslated(event, 37)">
+    <a href="page-37.html" class="nav-btn next">
         <div class="nav-btn-label"><span class="tr-text">Sonraki Sayfa</span><span class="en-text" style="display:none;">Next Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 37 — Switch İfadeleri</span><span class="en-text" style="display:none;">Page 37 — Switch Statements</span></div>
     </a>
