Sayfa 40-52 çevirisi eklendi — Chapter 3: Functions tamamlandı
Chapter 3'ün kalan 13 sayfası paralel AI team ile çevrildi.
Glossary ve proje durumu güncellendi.

--- a/index.html
+++ b/index.html
@@ -277,14 +277,14 @@
             <button class="page-go-btn" onclick="goToPage()">Git</button>
         </div>
         <div class="error-message" id="errorMsg"></div>
-        <div class="input-hint">Çevrilen sayfalar: 1 — 39 &nbsp;|&nbsp; Kitap toplam: ~464 sayfa</div>
+        <div class="input-hint">Çevrilen sayfalar: 1 — 52 &nbsp;|&nbsp; Kitap toplam: ~464 sayfa</div>
     </div>
 
     <!-- Çevrilen Sayfalar -->
     <div class="pages-section">
         <div class="pages-title">
             Çevrilen Sayfalar
-            <span class="badge">39</span>
+            <span class="badge">52</span>
         </div>
 
         <a href="pages/page-1.html" class="page-card">
@@ -629,6 +629,123 @@
             <div class="page-card-arrow">&rsaquo;</div>
         </a>
 
+        <a href="pages/page-40.html" class="page-card">
+            <div class="page-card-number">40</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Fonksiyon Argümanları (devam) / Function Arguments (cont.)</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Use Descriptive Names / Function Arguments</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-41.html" class="page-card">
+            <div class="page-card-number">41</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Sık Görülen Tekli Formlar, Bayrak Argümanları / Common Monadic Forms, Flag Arguments</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Common Monadic Forms / Flag Arguments</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-42.html" class="page-card">
+            <div class="page-card-number">42</div>
+            <div class="page-card-info">
+                <div class="page-card-title">İkililer, Üçlüler / Dyadic Functions, Triads</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Dyadic Functions / Triads</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-43.html" class="page-card">
+            <div class="page-card-number">43</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Argüman Nesneleri, Argüman Listeleri, Fiiller ve Anahtar Kelimeler</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Argument Objects / Argument Lists / Verbs and Keywords</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-44.html" class="page-card">
+            <div class="page-card-number">44</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Yan Etkilere Dikkat / Have No Side Effects</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Have No Side Effects</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-45.html" class="page-card">
+            <div class="page-card-number">45</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Çıkış Argümanları, Komut Sorgu Ayrımı / Output Arguments, Command Query Separation</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Output Arguments / Command Query Separation</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-46.html" class="page-card">
+            <div class="page-card-number">46</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Hata Kodları Yerine İstisnalar, Try/Catch Blokları / Prefer Exceptions, Extract Try/Catch</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Prefer Exceptions / Extract Try/Catch Blocks</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-47.html" class="page-card">
+            <div class="page-card-number">47</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Error.java Bağımlılık Mıknatısı, Kendini Tekrar Etme / Dependency Magnet, DRY</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Error.java Dependency Magnet / Don't Repeat Yourself</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-48.html" class="page-card">
+            <div class="page-card-number">48</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Yapısal Programlama, Fonksiyonları Nasıl Yazarsınız?, Sonuç / Structured Programming, Conclusion</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Structured Programming / How Do You Write Functions Like This? / Conclusion</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-49.html" class="page-card">
+            <div class="page-card-number">49</div>
+            <div class="page-card-info">
+                <div class="page-card-title">SetupTeardownIncluder (Listing 3-7)</div>
+                <div class="page-card-chapter">Chapter 3: Functions — SetupTeardownIncluder</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-50.html" class="page-card">
+            <div class="page-card-number">50</div>
+            <div class="page-card-info">
+                <div class="page-card-title">SetupTeardownIncluder (devam)</div>
+                <div class="page-card-chapter">Chapter 3: Functions — SetupTeardownIncluder</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-51.html" class="page-card">
+            <div class="page-card-number">51</div>
+            <div class="page-card-info">
+                <div class="page-card-title">SetupTeardownIncluder (son) &amp; Kaynakça</div>
+                <div class="page-card-chapter">Chapter 3: Functions — SetupTeardownIncluder / Bibliography</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
+        <a href="pages/page-52.html" class="page-card">
+            <div class="page-card-number">52</div>
+            <div class="page-card-info">
+                <div class="page-card-title">Kaynakça / Bibliography</div>
+                <div class="page-card-chapter">Chapter 3: Functions — Bibliography</div>
+            </div>
+            <div class="page-card-arrow">&rsaquo;</div>
+        </a>
+
     </div>
 
 </div>
@@ -679,6 +796,19 @@
         37: { file: 'pages/page-37.html', title: 'Switch İfadeleri & Açıklayıcı İsimler / Switch Statements & Use Descriptive Names', chapter: 'Chapter 3: Functions' },
         38: { file: 'pages/page-38.html', title: 'Tutarlı Kelime Haznesi & Fonksiyon Argümanları / Consistent Lexicon & Function Arguments', chapter: 'Chapter 3: Functions' },
         39: { file: 'pages/page-39.html', title: 'Sık Görülen Tekli Formlar, Bayrak Argümanları, İkililer / Common Monadic Forms, Flag Arguments, Dyads', chapter: 'Chapter 3: Functions' },
+        40: { file: 'pages/page-40.html', title: 'Fonksiyon Argümanları (devam) / Function Arguments (cont.)', chapter: 'Chapter 3: Functions' },
+        41: { file: 'pages/page-41.html', title: 'Sık Görülen Tekli Formlar, Bayrak Argümanları / Common Monadic Forms, Flag Arguments', chapter: 'Chapter 3: Functions' },
+        42: { file: 'pages/page-42.html', title: 'İkililer, Üçlüler / Dyadic Functions, Triads', chapter: 'Chapter 3: Functions' },
+        43: { file: 'pages/page-43.html', title: 'Argüman Nesneleri, Argüman Listeleri, Fiiller ve Anahtar Kelimeler', chapter: 'Chapter 3: Functions' },
+        44: { file: 'pages/page-44.html', title: 'Yan Etkilere Dikkat / Have No Side Effects', chapter: 'Chapter 3: Functions' },
+        45: { file: 'pages/page-45.html', title: 'Çıkış Argümanları, Komut Sorgu Ayrımı / Output Arguments, Command Query Separation', chapter: 'Chapter 3: Functions' },
+        46: { file: 'pages/page-46.html', title: 'Hata Kodları Yerine İstisnalar, Try/Catch Blokları / Prefer Exceptions, Extract Try/Catch', chapter: 'Chapter 3: Functions' },
+        47: { file: 'pages/page-47.html', title: 'Error.java Bağımlılık Mıknatısı, Kendini Tekrar Etme / Dependency Magnet, DRY', chapter: 'Chapter 3: Functions' },
+        48: { file: 'pages/page-48.html', title: 'Yapısal Programlama, Fonksiyonları Nasıl Yazarsınız?, Sonuç / Structured Programming, Conclusion', chapter: 'Chapter 3: Functions' },
+        49: { file: 'pages/page-49.html', title: 'SetupTeardownIncluder (Listing 3-7)', chapter: 'Chapter 3: Functions' },
+        50: { file: 'pages/page-50.html', title: 'SetupTeardownIncluder (devam)', chapter: 'Chapter 3: Functions' },
+        51: { file: 'pages/page-51.html', title: 'SetupTeardownIncluder (son) & Kaynakça', chapter: 'Chapter 3: Functions' },
+        52: { file: 'pages/page-52.html', title: 'Kaynakça / Bibliography', chapter: 'Chapter 3: Functions' },
     };
 
     const MAX_BOOK_PAGE = 464;
