--- a/pages/page-39.html
+++ b/pages/page-39.html
@@ -188,9 +188,9 @@
         <div class="nav-btn-label"><span class="tr-text">Önceki Sayfa</span><span class="en-text" style="display:none;">Previous Page</span></div>
         <div class="nav-btn-page"><span class="tr-text">Sayfa 38 — Fonksiyon Argümanları</span><span class="en-text" style="display:none;">Page 38 — Function Arguments</span></div>
     </a>
-    <a href="page-40.html" class="nav-btn next not-translated" onclick="return handleUntranslated(event, 40)">
+    <a href="page-40.html" class="nav-btn next">
         <div class="nav-btn-label"><span class="tr-text">Sonraki Sayfa</span><span class="en-text" style="display:none;">Next Page</span></div>
-        <div class="nav-btn-page"><span class="tr-text">Sayfa 40 — Üçlüler ve Argüman Listeleri</span><span class="en-text" style="display:none;">Page 40 — Triads and Argument Lists</span></div>
+        <div class="nav-btn-page"><span class="tr-text">Sayfa 40 — Fonksiyon Argümanları (devam)</span><span class="en-text" style="display:none;">Page 40 — Function Arguments (cont.)</span></div>
     </a>
 </div>
 
